refactored admin blog creation code to allow writing to firebase with database rules set to only allow writes by logged in users

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Welcome to my Personal Page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet"> -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:200,300,500,700|Roboto+Condensed:300,700" rel="stylesheet">
@@ -165,21 +164,9 @@
         </div>
     </footer>
 
-
-    <!-- <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script> -->
-    <!-- <script>
-      // Initialize Firebase
-      var config = {
-        apiKey: "AIzaSyDCcUjGA2Aucemv8DdP4HDz8a6bVYCXenE",
-        authDomain: "personal-site-60774.firebaseapp.com",
-        databaseURL: "https://personal-site-60774.firebaseio.com",
-        projectId: "personal-site-60774",
-        storageBucket: "personal-site-60774.appspot.com",
-        messagingSenderId: "674756866097"
-      };
-      firebase.initializeApp(config);
-    </script> -->
-
+    <!-- Scripts -->
+    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase.js"></script>
+    <!-- <script src="./app/app.Config.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
