small tweaks to blog post creation

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <li class="nav__Link"><a href="#" class="nav__link--blog">Blog</a></li>
                         <li class="nav__Link"><a href="#" class="nav__link--resume">Resume</a></li>
                         <li class="nav__Link"><a href="#" class="nav__link--contact">Contact</a></li>
-                        <li class="nav__Link"><a href="#" class="nav__link--admin">Admin</a></li>
+                        <button class="nav__Link invisible"><a href="#" class="nav__link--admin">Admin</a></button>
                     </ul>
                 </div>
             </div>
