--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
                         <li class="nav__Link"><a href="#bio" class="nav__link--bio">Bio</a></li>
                         <li class="nav__Link"><a href="#" class="nav__link--projects">Projects</a></li>
-                        <li class="nav__Link"><a href="#" class="nav__link--blog">Blog</a></li>
-                        <li class="nav__Link"><a href="#" class="nav__link--resume">Resume</a></li>
+                        <li class="nav__Link hidden"><a href="#" class="nav__link--blog">Blog</a></li>
+                        <li class="nav__Link hidden"><a href="#" class="nav__link--resume">Resume</a></li>
                         <li class="nav__Link"><a href="#" class="nav__link--contact">Contact</a></li>
-                        <button class="nav__Link invisible"><a href="#" class="nav__link--admin">Admin</a></button>
+                        <button class="nav__Link hidden"><a href="#" class="nav__link--admin">Admin</a></button>
                     </ul>
                 </div>
             </div>
@@ -61,9 +61,10 @@
 
             <article id="bio" class="container">
                 
-                <p>I have lived in Nashville, TN for over 15 years working in the music business as an audio engineer and am currently enrolled in the Nashville Software School. I have always enjoyed working with computers, android phones and technology. I've had several side jobs which involved different aspects of using digital tools such as tweaking websites, updating content on websites, editing photos in photoshop and consulting businesses on social media setup and management. I really enjoy problem solving, creating things and working on projects on a team. I am excited to learn as much as possible while attending NSS and grow my skills as a web developer.</p> 
-
-                <p>I also enjoy cycling, hiking, craft beer, working with my hands. I live in Nashville with my wife and two kids. </p>
+                <p>As an audio engineer, I developed an impeccable attention to detail, tenacious work ethic, and diverse problem solving skills. I’ve always loved blending creativity with technology and creating a tangible copy of a music performance has always been incredibly fulfilling. I love helping others and get excited when it involves learning something new.</p>
+                <p>Technology has always fascinated me since receiving my first computer as a young child. Always curious how things worked, I would endlessly tinker, experiment and read about computers, electric bass gear, or music recording equipment. I built my first website as a college freshman and was immediately enamored with the power and possibilities. Almost every job I’ve held has been related to technology, from recording music to digital photo editing to consulting businesses on how to use and leverage social media. As I pondered the next steps in my career, the Nashville Software School became the obvious choice since it mirrored my drive to dive deep into learning new things. I’ve loved the collaborative environment and being challenged every day. </p>
+                <p>The music recording industry drew me to Nashville and was my livelihood for over 15 years. Working my way up from studio intern to staff engineer and eventually freelance audio engineer instilled a great work ethic, perseverance, and attention to detail. Working with countless production teams allowed me to hone my teamwork skills and learn to adapt to different environments and meet challenging deadlines. Being a part of the industry while it began embracing computers and digital storage further ingrained my deep love of technology and lifelong learning. There is always something new to learn. The amount of crossover between the recording industry and software development is amazing, from breaking down projects into small achievable blocks, to communicating well on a team, and thinking outside the box to solve problems.</p>
+                <p>When I’m not coding I love to mountain bike, discover new craft beer, tinker with Android development and spend time with my family.</p>
             
             </article>
         </section>
