fixed navigation to bio page from either Projects or Contact

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav" role: "tablist">
 
-                        <li class="nav__Link"><a href="#bio" class="nav__link--bio">Bio</a></li>
+                        <li class="nav__Link"><a href="/#bio" class="nav__link--bio">Bio</a></li>
                         <li class="nav__Link"><a href="#" class="nav__link--projects">Projects</a></li>
                         <li class="nav__Link hidden"><a href="#" class="nav__link--blog">Blog</a></li>
                         <li class="nav__Link hidden"><a href="#" class="nav__link--resume">Resume</a></li>
@@ -59,7 +59,7 @@
             </header> <!-- /end of jumbotron -->
 
 
-            <article id="bio" class="container">
+            <article id="bio" class="mainSection container">
                 
                 <p>As an audio engineer, I developed an impeccable attention to detail, tenacious work ethic, and diverse problem solving skills. I’ve always loved blending creativity with technology and creating a tangible copy of a music performance has always been incredibly fulfilling. I love helping others and get excited when it involves learning something new.</p>
                 <p>Technology has always fascinated me since receiving my first computer as a young child. Always curious how things worked, I would endlessly tinker, experiment and read about computers, electric bass gear, or music recording equipment. I built my first website as a college freshman and was immediately enamored with the power and possibilities. Almost every job I’ve held has been related to technology, from recording music to digital photo editing to consulting businesses on how to use and leverage social media. As I pondered the next steps in my career, the Nashville Software School became the obvious choice since it mirrored my drive to dive deep into learning new things. I’ve loved the collaborative environment and being challenged every day. </p>
