--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                         <h1 id= "homeHeading">Greg Lawrence</h1>
                         <hr>
-                        <h6 class="lead">Web Developer / Audio Engineer</h6>
+                        <h6 class="lead">Software Developer</h6>
                         <a href="#bio" class="btn btn-primary btn-xl page-scroll">Learn More</a>
                     </div>
                 </div>
