fixed collapsible navbar

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <div class="site-content">
-        <nav class="navbar navbar-inverse navbar-fixed-top" id="myNavbar">
+        <nav class="navbar navbar-inverse navbar-fixed-top" >
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -30,7 +30,7 @@
                     <a class="navbar-brand nav__link--landingPage" href="#">GML</a>
                 </div>
 
-                <div class="collapse navbar-collapse">
+                <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav" role: "tablist">
 
                         <li class="nav__Link"><a href="/#bio" class="nav__link--bio">Bio</a></li>
